// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectfieldWrapper snapshots tests renders SelectField component 1`] = `
<Fragment>
  <WithStyles(ForwardRef(FormControl))
    error={false}
    style={
      Object {
        "width": "100%",
      }
    }
  >
    <WithStyles(ForwardRef(InputLabel))
      id="test-label"
    />
    <WithStyles(ForwardRef(Select))
      MenuProps={
        Object {
          "data-testid": "test-options",
          "id": "test-options",
        }
      }
      SelectDisplayProps={
        Object {
          "data-testid": "test-select",
          "id": "test-select",
        }
      }
      autoWidth={true}
      floatingLabelText="This is a test selectfield component"
      fullWidth={true}
      inputProps={
        Object {
          "aria-labelledby": "test-label",
          "data-testid": "test-input",
          "id": "test-input",
        }
      }
      name="selectfield"
      onBlur={[Function]}
      onChange={[Function]}
      type="text"
    />
  </WithStyles(ForwardRef(FormControl))>
</Fragment>
`;

exports[`SelectfieldWrapper snapshots tests renders an error 1`] = `
<Fragment>
  <WithStyles(ForwardRef(FormControl))
    error={true}
    style={
      Object {
        "width": "100%",
      }
    }
  >
    <WithStyles(ForwardRef(InputLabel))
      id="test-label"
    />
    <WithStyles(ForwardRef(Select))
      MenuProps={
        Object {
          "data-testid": "test-options",
          "id": "test-options",
        }
      }
      SelectDisplayProps={
        Object {
          "data-testid": "test-select",
          "id": "test-select",
        }
      }
      autoWidth={true}
      error={true}
      floatingLabelText="test selectfield component"
      fullWidth={true}
      inputProps={
        Object {
          "aria-labelledby": "test-label",
          "data-testid": "test-input",
          "id": "test-input",
        }
      }
      name="selectfield"
      onBlur={[Function]}
      onChange={[Function]}
      type="text"
    />
    <WithStyles(ForwardRef(FormHelperText))>
      Something bad happened
    </WithStyles(ForwardRef(FormHelperText))>
  </WithStyles(ForwardRef(FormControl))>
</Fragment>
`;
